--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,93 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-shadow: border-box;
-  font-family: 'roboto', sans-serif;
+  font-family: "roboto", sans-serif;
 }
 
-
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 p {
-    line-height: 1.5;
-    font-size: 17px;
+  line-height: 1.5;
+  font-size: 17px;
 }
 
 a {
-text-decoration: none;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.container {
+  padding: 50px 0;
+  width: 100%;
+}
+
+.row {
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 12px;
 }
 
 section {
-    background-color: rgb(245, 245, 245;)
+  background-color: rgb(245, 245, 245;);
 }
-
 
 .click {
-transition: all 400ms ease;
+  transition: all 400ms ease;
 }
-
-
 
 .click:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 .click:active {
-    transform: scale(0.8);
+  transform: scale(0.8);
 }
 
 .title {
-font-size: 76px;
-margin-bottom: 12px;
-text-align: left;
-line-height: 1;
+  font-size: 76px;
+  margin-bottom: 12px;
+  text-align: left;
+  line-height: 1;
 }
-
 
 .green {
-    color: #69bd30;
+  color: #69bd30;
 }
 
+.link__hover-effect {
+  position: relative;
+}
 
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  height: 3px;
+  width: 0;
+  right: 0;
+  transition: 400ms ease;
+}
+
+.link__hover-effect--white:after {
+  background-color: #fff;
+}
+
+.link__hover-effect--black:after {
+  background-color: #242424;
+}
+
+.link__hover-effect:hover:after {
+  left: 0;
+  width: 100%;
+}
 
 /* 
 
@@ -59,48 +95,93 @@ LANDING PAGE
 
 */
 
-
 #landing-page {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .header {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: 1000px;
-    padding: 0 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 1000px;
+  padding: 0 30px;
 }
-
 
 .header__para {
-    font-size: 16px;
-    line-height: 2;
-    max-width: 450px;
+  font-size: 16px;
+  line-height: 2;
+  max-width: 450px;
 }
-
 
 .social__list {
-    margin-top: 16px;
-    display: flex;
+  margin-top: 16px;
+  display: flex;
 }
 
-
 .social__link {
-    background-color: #69bd30;
-    color: white;
-    padding: 6px;
-    width: 17px;
-    height: 17px;
-    font-size: 14px;
-    margin-right: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-} 
+  background-color: #69bd30;
+  color: white;
+  padding: 6px;
+  width: 17px;
+  height: 17px;
+  font-size: 14px;
+  margin-right: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.mail__btn {
+  width: 70px;
+  height: 70px;
+  font-size: 32px;
+  border-radius: 50%;
+  border: none;
+  background-color: #242424;
+  color: white;
+  position: absolute;
+  bottom: 32px;
+  right: 40px;
+}
+
+.scroll {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.scroll__icon {
+  width: 20px;
+  height: 30px;
+  border: 2px solid #242424;
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scroll__icon:after {
+  background-color: #242424;
+  width: 4px;
+  height: 6px;
+  content: "";
+  background-color: #242424;
+  border-radius: 2px;
+  animation: scroll 1000ms infinite alternate-reverse;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateY(3px);
+  }
+  100% {
+    transform: translateY(-3px);
+  }
+}
 
 /* 
 
@@ -108,41 +189,244 @@ NAVIGATION
 
 */
 
-
-
 #personal-logo {
-    width: 50px;
-    height: 50px;
-    filter: invert(1);
+  width: 50px;
+  height: 50px;
+  filter: invert(1);
 }
 
-
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-    height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  height: 100px;
 }
 
 .nav__link--list {
-    display: flex;
-
+  display: flex;
 }
 
 .nav__link {
- margin: 0 12px;   
+  margin: 0 12px;
 }
 
 .nav__link--anchor {
-font-size: 17px;
-color: #242424;
-font-weight: 700;
+  font-size: 17px;
+  color: #242424;
+  font-weight: 700;
 }
 
- .fa-circle-half-stroke {
-    font-size: 20px;
- }
+.fa-circle-half-stroke {
+  font-size: 20px;
+}
+
+/* 
+
+MODAL
+
+*/
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 1100px;
+  height: 700px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+}
+
+.modal__half {
+  width: 50%;
+}
+
+.modal__about {
+  background-color: rgb(245, 245, 245);
+  padding: 40px 72px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.modal__languages {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.modal__language {
+  width: 25%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 300ms ease-in-out;
+}
+
+.modal__language:hover .language__name {
+transform: scale(1);
+}
+
+.modal__language:hover {
+  filter: brightness(80%);
+  transform: scale(0.9);
+}
+
+.language__name {
+  position: absolute;
+  bottom: -18.7px;
+  transform: scale(0);
+  transition: all 300ms ease-in-out;
+}
+
+.modal__language--img {
+  width: 75%;
+  margin-top: 17px;
+}
+
+.modal__contact {
+  background-color: #242424;
+  color: white;
+}
+
+.modal__title {
+  font-size: 27px;
+}
+
+.modal__sub-title {
+  margin: 12px 0 24px 0;
+}
+
+.modal__para {
+  margin-bottom: 12px;
+  line-height: 1.75;
+}
+
+/* 
+
+PROJECTS
+
+
+*/
+
+.section__title {
+  text-align: center;
+  font-size: 48px;
+  margin-bottom: 60px;
+}
+
+.project {
+  margin-top: 100px;
+}
+
+.project:hover .project__img {
+  transform: scale(1.07);
+  filter: blur(5px);
+}
+
+.project__img {
+  width: 100%;
+  transition: all 607ms ease;
+}
+
+.project__wrapper {
+  position: relative;
+  border-radius: 20px;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+  overflow: hidden;
+}
+
+.project__wrapper:hover .project__description {
+  opacity: 1;
+  transform: translateY(-50%);
+}
+
+.project__wrapper:hover .project__img {
+  transform: scale(1.07);
+  filter: blur(5px);
+}
+
+.project__description {
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(100%);
+  color: white;
+  opacity: 0;
+  transition: opacity 300ms ease, transform 450ms ease;
+  max-width: 550px;
+}
+
+.project__wrapper:hover .project__wrapper--bg {
+  opacity: 0.7;
+}
+
+.project__wrapper--bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1c1c1c;
+  opacity: 0;
+}
+
+.project__description--title {
+  font-size: 40px;
+}
+
+.project__description--sub-title {
+  margin-top: 8px;
+}
+
+.project__description--link {
+  color: white;
+  font-size: 20px;
+  margin-right: 16px;
+}
+
+.project__description--para {
+  margin: 16px 0;
+}
+
+/* 
+
+FOOTER
+
+*/
+
+footer {
+  background-color: #242424;
+  display: flex;
+  padding: 6% 0;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo--img {
+  width: 70px;
+}
+
+.footer__social--list {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-around;
+  margin: 28px 0;
+}
+
+.footer__social--link,
+.footer__copyright {
+  color: white;
+}
