--- a/Build like a pro/E Portfolio 2/styles.css
+++ b/Build like a pro/E Portfolio 2/styles.css
@@ -7,6 +7,12 @@
   font-family: "roboto", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
+
 li {
   list-style-type: none;
 }
@@ -38,6 +44,7 @@ button {
 
 section {
   background-color: rgb(245, 245, 245;);
+  transition: all 300ms ease-in-out;
 }
 
 input,
@@ -133,6 +140,54 @@ textarea:focus {
   width: 100%;
 }
 
+
+nav,
+.scroll,
+.header {
+  opacity: 1;
+  visibility: visible;
+  transition: all 570ms 370ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+  opacity: 0;
+  visibility: hidden;
+  transition: all 570ms;
+}
+
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-circle-half-stroke,
+.dark-theme .header__para {
+  color: white;
+}
+
+.dark-theme section{
+background-color: #242424;
+}
+
+.dark-theme #personal-logo {
+  filter: none;
+}
+
+.dark-theme .scroll__icon {
+  border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after {
+  background-color: white;
+}
+
+.dark-theme .mail__btn {
+  background-color: white;
+  color: #242424;
+}
 /* 
 
 LANDING PAGE 
@@ -196,6 +251,7 @@ LANDING PAGE
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
+
 }
 
 .scroll__icon {
@@ -206,6 +262,7 @@ LANDING PAGE
   display: flex;
   align-items: center;
   justify-content: center;
+  s
 }
 
 .scroll__icon:after {
@@ -282,11 +339,21 @@ MODAL
   width: 90%;
   max-width: 1100px;
   height: 700px;
-  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
   border-radius: 20px;
   overflow: hidden;
   display: flex;
+  visibility: hidden;
+  z-index: -1;
+  transition: visibility  1s, z-index 1s, box-shadow 0.5s ease;
 }
+
+
+.modal--open .modal{
+  z-index: 60;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  visibility: visible;
+}
+
 
 .modal__half {
   width: 50%;
@@ -294,11 +361,23 @@ MODAL
   flex-direction: column;
   justify-content: center;
   position: relative;
+  transition: all 370ms ease-in-out;
 }
+
+
+.modal--open .modal__about,
+.modal--open .modal__contact
+{
+transform: translate(0%);
+}
+
+
+
 
 .modal__about {
   background-color: rgb(245, 245, 245);
   padding: 40px 72px;
+ transform: translateX(-110%);
 }
 
 .modal__languages {
@@ -339,6 +418,7 @@ MODAL
 .modal__contact {
   background-color: #242424;
   color: white;
+  transform: translateX(110%);
 }
 
 .modal__title {
@@ -417,16 +497,15 @@ MODAL
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
-    z-index: -1;
+  z-index: -1;
 }
 
 .modal__overlay--loading {
   background-color: #242424;
   font-size: 80px;
-
 }
 
 .modal__overlay--success {
@@ -437,10 +516,14 @@ MODAL
   transform: translateY(-80px);
   line-height: 1.7;
 }
-  
+
+.modal__overlay--visible {
+  z-index: 1;
+  display: flex;
+}
 
 .fa-spinner {
-animation: spinner 750ms infinite ;
+  animation: spinner 750ms linear infinite;
 }
 
 @keyframes spinner {
@@ -451,8 +534,6 @@ animation: spinner 750ms infinite ;
     transform: rotate(360deg);
   }
 }
-
-
 
 .modal__exit {
   position: absolute;
@@ -557,6 +638,7 @@ FOOTER
 */
 
 footer {
+  position: relative;
   background-color: #242424;
   display: flex;
   padding: 6% 0;
@@ -584,3 +666,62 @@ footer {
 .footer__copyright {
   color: white;
 }
+
+
+/* 
+
+SHAPES
+
+*/
+
+
+.shape {
+  position: fixed;
+}
+
+.shape--0 {
+ top: 15vh;
+ left: 5vw;
+}
+.shape--1 {
+   top: 15vh;
+ left: 50vw;
+}
+.shape--2 {
+   top: 15vh;
+ left: 80vw;
+}
+.shape--3 {
+   top: 50vh;
+ left: 5vw;
+}
+.shape--4 {
+ top: 50vh;
+ left: 50vw;
+}
+.shape--5 {
+  top: 50vh;
+ left: 80vw;
+}
+.shape--6 {
+  top: 80vh;
+ left: 5vw;
+}
+.shape--7 {
+  top: 80vh;
+ left: 50vw;
+}
+.shape--8 {
+  top: 80vh;
+ left: 80vw;
+}
+
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
+
+/* Small Phones, Tablets, Large smart phones */
+
