--- a/Build like a pro/E Portfolio 2/styles.css
+++ b/Build like a pro/E Portfolio 2/styles.css
@@ -3,13 +3,14 @@
 * {
   margin: 0;
   padding: 0;
-  box-shadow: border-box;
+  box-sizing: border-box;
   font-family: "roboto", sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
 }
+
 
 
 
@@ -168,7 +169,7 @@ nav,
 }
 
 .dark-theme section{
-background-color: #242424;
+  background-color: #242424;
 }
 
 .dark-theme #personal-logo {
@@ -241,17 +242,44 @@ LANDING PAGE
   border: none;
   background-color: #242424;
   color: white;
-  position: absolute;
+  position: fixed;
   bottom: 32px;
   right: 40px;
+  z-index: 9999;
+ 
 }
+
+.mail__btn a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.mail__btn:hover {
+  background-color: #69bd30;
+  color: white;
+  transition: all 300ms ease-in-out;
+}
+
+.mail__btn.invert {
+  background-color: white;
+  color: #242424;
+  border: 2px solid #242424;
+}
+
+.mail__btn.invert:hover {
+ background-color: #69bd30;
+  color: white;
+  transition: all 300ms ease-in-out;
+}
+
+
 
 .scroll {
   position: absolute;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
-
+  
 }
 
 .scroll__icon {
@@ -717,11 +745,228 @@ SHAPES
 }
 
 
-html, body {
-  overflow-x: hidden;
-  width: 100%;
-  max-width: 100vw;
-}
 
 /* Small Phones, Tablets, Large smart phones */
+
+@media (max-width: 1024px) {
+.modal__contact {
+  padding: 40px 20px;
+}
+
+.modal__about {
+  padding: 40px 20px;
+padding-bottom: 117px;
+}
+
+.form__submit {
+  margin-top: 50px;
+}
+}
+
+
+
+
+
+
+@media (max-width: 768px) {
+
+  .title {
+  font-size: 80px;
+  }
+
+.header__para {
+font-size: 20px;
+}
+
+.modal {
+  top: 0;
+  left: 0;
+  transform: none;
+  height: auto;
+  width: 100%;
+  flex-direction: column-reverse;
+border-radius: 0;
+
+}
+
+
+.modal__para,
+.modal__title, 
+.modal__sub-title {
+  margin-left: 70px;
+ margin-right: 70px;
+}
+
+
+
+
+.form__submit {
+  margin-bottom: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.modal__language--img {
+  width: 30%;
+
+}
+
+.modal__contact form,
+.contact__form {
+  width: 100%;
+  max-width: 100%;
+  padding: 0; 
+  box-sizing: border-box;
+}
+
+.form__item {
+  width: 80%;
+}
+
+input,
+textarea {
+  width: 80%;
+  box-sizing: border-box;
+}
+
+.modal__half {
+  width: 100%;
+}
+
+}
+
+
+
+/* SMALL PHONES  */
+
+@media (max-width: 480px) {
+
+  .title {
+    font-size: 52px;
+  }
+
+  .header__para {
+    font-size: 18px;
+  }
+
+  .nav__link:first-child {
+  display: none;
+  }
+
+
+  .project__description--para {
+    display: none;
+  }
+
+
+  .project__description {
+    left: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .project__description--sub-title {
+    margin-bottom: 8px;
+  }
+
+  .modal__half {
+    padding: 40px;
+  }
+
+  .modal__language--img {
+    width: 50%;
+  }
+
+
+  input,
+  textarea {
+    width: 70%;
+    box-sizing: border-box;
+  }
+  .form__item {
+    width: 58%;
+    margin-left: 0;
+  }
+
+
+  .form__submit {
+    margin-left: 14px;
+  }
+
+.modal__para {
+    font-size: 15px;
+    margin-left: 12px;
+    margin-right: 12px;
+    line-height: 1.6;
+    text-align: center;
+
+}
+
+.modal__title--about{
+     font-size: 20px;           
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+    white-space: nowrap;       
+    overflow: hidden;          
+    text-overflow: ellipsis;
+}
+
+
+
+.modal__sub-title--about {
+    font-size: 14px;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+    white-space: nowrap;       
+    overflow: hidden;          
+    text-overflow: ellipsis;
+}
+
+}
+
+/* VERY SMALL PHONES  */
+
+@media (max-width: 390px) {
+  input,
+  textarea {
+    width: 50%;
+    box-sizing: border-box;
+  }
+  .form__item {
+    width: 54%;
+    margin-left: 0;
+  }
+
+  .form__submit {
+    margin-left: 10px;
+  }
+
+.modal__title--contact  {
+    font-size: 24px;        
+  margin-left: 67px;
+  margin-right: 0;
+  text-align: center;
+  white-space: nowrap;      
+  overflow: hidden;         
+  text-overflow: ellipsis;        
+    
+
+
+}
+
+.modal__sub-title--contact {
+    font-size: 14px;
+    text-align: center;
+line-height: 20px;
+
+  }
+}
+  
+
+
 
